Fix center alignment on OEM tag

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,8 +1,10 @@
 .pon-nav__item--oem:after {
+  align-items: center;
   background-color: var(--md-primary-fg-color);
   border-radius: 9999px;
   color: var(--md-primary-bg-color);
   content: 'OEM';
+  display: flex;
   margin: 0 0.25rem;
   padding: 0 0.25rem;
 }
